test/expected/explain_felv_v.out
explain void f( ..., void )
                ^
17: error: variadic specifier must be last
